2005-01-03  Werner Lemberg  <wl@gnu.org>

	Prepare glyph shapes for mf2pt1 conversion.

	* mf/feta-accordion.mf (accreg_pen): Removed.  No longer used.
	(accDiscant, accFreebase, accStdbase): Replace `draw' with
	`penstroke'.
	(accDot): Use `drawdot'.
	(accBayanbase): Replace `draw' with `draw_gridline'.
	(print_penpos): Moved to feta-macros.mf.
	(accOldEE): Replace `filldraw' with `penstroke'.
	Replace `draw' with `penstroke' and `drawdot'.

	* mf/feta-banier.mf: Code clean-up.
	("grace dash (up)", "grace dash (down)"): Replace `draw' with
	`fill'.

	* mf/feta-bolletjes (draw_cross): Remove call to `labels'.

	* mf/feta-eindelijk.mf (draw_rest_bulb, draw_eigth_rest): Add
	paremeter to control drawing of labels.  Update all callers.

	* mf/feta-klef.mf (draw_c_clef): Use `&' not `..' to connect paths.
	(new_bulb): Return a bulb as a single path.  To do that, it now
	takes some more parameters.  Updated all callers.
	(draw_gclef): Major clean-up.  `draw' has been replaced with
	`penstroke', unnecessary outlines have been removed.
	Remove (unused) gnome-canvas code.

	* mf/feta-macros.mf (print_penpos): New macro (from
	feta-accordion.mf).
	Other minor fixes.

	* mf/feta-pendaal.mf ("Pedal asterisk"): Use `undrawdot'.
	("Pedal dot"): Use `drawdot'.
	(draw_pedal_P): Add parameter to control drawing of labels.  Update
	all callers.
	Fix shape at top.
	(draw_pedal_e): Add parameter to control drawing of labels.  Update
	all callers.
	(draw_pedal_d): Add parameter to control drawing of labels.  Update
	all callers.
	Revert drawing direction.

	* mf/feta-schrift.mf (draw_fermata): Use single path.
	(draw_short_fermata): Replace `filldraw' with `fill'.
	(draw_long_fermata, draw_very_long_fermata): Replace calls to
	`draw_rounded_block' with a single path.
	("Thumb"): Draw full circle instead of mirroring segments.
	(draw_accent): New macro.
	("> accent", "espr"): Use it.
	(draw_marcato): Replace `filldraw' and `draw' with `fill'.