@@ -667,7 +667,8 @@ def symlink_tree (target, source, env):
 	      ('lily/',      'bin/lilypond-bin'),
 	      ('scripts/',   'bin/lilypond'),
 	      ('scripts/',   'bin/lilypond-book'),
-	      ('mf',         'share/lilypond/dvips'),
+	      ('mf',         'share/lilypond/dvips/mf-out'),
+	      ('#ps',        'share/lilypond/dvips/ps'),
 	      ('#ps',        'share/lilypond/tex/music-drawing-routines.ps'),
 	      ('mf',         'share/lilypond/otf'),
 	      ('mf',         'share/lilypond/tfm'),
