@@ -1,3 +1,11 @@
+2005-01-03  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* SConstruct: 
+	* ps/GNUmakefile (INSTALLATION_FILES): teTeX-3.0
+	compatibility (backportme).
+
+	* GNUmakefile.in: teTeX-3.0 compatibility (backportme).
+
 2005-01-03  Werner Lemberg  <wl@gnu.org>
 
 	Prepare glyph shapes for mf2pt1 conversion.
